<resources>
    <string name="app_name">RunningMan</string>
    <string name="KakaoAuthKey">kakao99180739a7bcf290c7df2a47e48e4767</string>
    <string name="gender">성별이 무엇인가요?</string>
    <string name="next">다음</string>
    <string name="women">여자</string>
    <string name="men">남자</string>
    <string name="running_man_icon_description">This is an Running Man icon</string>
    <string name="weight">몸무게가 어떻게 되나요?</string>
    <string name="weight_hint">몸무게를 적어주세요!</string>
    <string name="height_hint">키를 적어주세요!</string>
    <string name="height">키가 몇cm신가요?</string>
    <string name="age">나이가 어떻게 되나요?</string>
    <string name="age_hint">나이를 적어주세요!</string>
    <string name="start">시작합시다!</string>
    <string name="start_button">시작하기</string>
    <string name="today">오늘</string>
    <string name="walk">걸음</string>
    <string name="running_count_example">0</string>
    <string name="sunday_small">일</string>
    <string name="monday_small">월</string>
    <string name="tuesday_small">화</string>
    <string name="wednesday_small">수</string>
    <string name="thursday_small">목</string>
    <string name="friday_small">금</string>
    <string name="saturday_small">토</string>
    <string name="targerDistance">목표 거리</string>
    <string name="targerTime">목표 시간</string>
    <string name="targerCalorie">목표 칼로리 소모</string>
    <string name="targetSteps">목표 걸음 수</string>
    <string name="alarmSwitch">푸시 알림</string>
    <string name="privacyPolicy">개인정보처리방침</string>
    <string name="openSourceLicense">오픈소스 라이선스</string>
    <string name="runningManDevelopers">Made By\nJiwon Choi\nSeongWook Jeong</string>
    <string name="user_gender">성별</string>
    <string name="user_weight">몸무게</string>
    <string name="user_height">키</string>
    <string name="user_age">나이</string>
</resources>