<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.main.MainActivity">

    <TextView
        android:id="@+id/main_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/today"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/runningContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title_text"
        android:paddingBottom="10dp"
        android:background="@drawable/gray15_background">
        
        <com.cjwjsw.runningman.presentation.component.MainRunningProgressBar
            android:id="@+id/runningProgressBar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/runningCountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running_count_example"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/runningProgressBar"
            app:layout_constraintEnd_toEndOf="@id/runningProgressBar"
            app:layout_constraintTop_toTopOf="@id/runningProgressBar"
            app:layout_constraintBottom_toBottomOf="@id/runningProgressBar"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/runningProgressBar"
            app:layout_constraintEnd_toEndOf="@id/runningProgressBar"
            app:layout_constraintBottom_toBottomOf="@id/runningProgressBar"
            app:layout_constraintTop_toBottomOf="@id/runningCountText"
            android:text="@string/walk"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/pauseButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_circle_button"
            android:src="@drawable/pause_blue"/>

        <com.cjwjsw.runningman.presentation.component.MainRunningDailyProgressBar
            android:id="@+id/sundayProgressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runningProgressBar"
            app:layout_constraintEnd_toStartOf="@id/mondayProgressBar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/sundayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/sundayProgressBar"
            app:layout_constraintEnd_toEndOf="@id/sundayProgressBar"
            app:layout_constraintTop_toBottomOf="@id/sundayProgressBar"
            android:layout_marginTop="10dp"
            android:text="@string/sunday_small"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <com.cjwjsw.runningman.presentation.component.MainRunningDailyProgressBar
            android:id="@+id/mondayProgressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toEndOf="@id/sundayProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runningProgressBar"
            app:layout_constraintEnd_toStartOf="@id/tuesdayProgressBar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/mondayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/mondayProgressBar"
            app:layout_constraintEnd_toEndOf="@id/mondayProgressBar"
            app:layout_constraintTop_toBottomOf="@id/mondayProgressBar"
            android:layout_marginTop="10dp"
            android:text="@string/monday_small"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <com.cjwjsw.runningman.presentation.component.MainRunningDailyProgressBar
            android:id="@+id/tuesdayProgressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toEndOf="@id/mondayProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runningProgressBar"
            app:layout_constraintEnd_toStartOf="@id/wednesdayProgressBar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/tuesdayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tuesdayProgressBar"
            app:layout_constraintEnd_toEndOf="@id/tuesdayProgressBar"
            app:layout_constraintTop_toBottomOf="@id/tuesdayProgressBar"
            android:layout_marginTop="10dp"
            android:text="@string/tuesday_small"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <com.cjwjsw.runningman.presentation.component.MainRunningDailyProgressBar
            android:id="@+id/wednesdayProgressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toEndOf="@id/tuesdayProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runningProgressBar"
            app:layout_constraintEnd_toStartOf="@id/thursdayProgressBar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/wednesdayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/wednesdayProgressBar"
            app:layout_constraintEnd_toEndOf="@id/wednesdayProgressBar"
            app:layout_constraintTop_toBottomOf="@id/wednesdayProgressBar"
            android:layout_marginTop="10dp"
            android:text="@string/wednesday_small"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <com.cjwjsw.runningman.presentation.component.MainRunningDailyProgressBar
            android:id="@+id/thursdayProgressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toEndOf="@id/wednesdayProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runningProgressBar"
            app:layout_constraintEnd_toStartOf="@id/fridayProgressBar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/thursdayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/thursdayProgressBar"
            app:layout_constraintEnd_toEndOf="@id/thursdayProgressBar"
            app:layout_constraintTop_toBottomOf="@id/thursdayProgressBar"
            android:layout_marginTop="10dp"
            android:text="@string/thursday_small"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <com.cjwjsw.runningman.presentation.component.MainRunningDailyProgressBar
            android:id="@+id/fridayProgressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toEndOf="@id/thursdayProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runningProgressBar"
            app:layout_constraintEnd_toStartOf="@id/saturdayProgressBar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/fridayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/fridayProgressBar"
            app:layout_constraintEnd_toEndOf="@id/fridayProgressBar"
            app:layout_constraintTop_toBottomOf="@id/fridayProgressBar"
            android:layout_marginTop="10dp"
            android:text="@string/friday_small"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <com.cjwjsw.runningman.presentation.component.MainRunningDailyProgressBar
            android:id="@+id/saturdayProgressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toEndOf="@id/fridayProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runningProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/saturdayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/saturdayProgressBar"
            app:layout_constraintEnd_toEndOf="@id/saturdayProgressBar"
            app:layout_constraintTop_toBottomOf="@id/saturdayProgressBar"
            android:layout_marginTop="10dp"
            android:text="@string/saturday_small"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/runningContainer"
        android:layout_margin="20dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>